force-app/main/default/objects/Opportunity/fields/Customer_Stage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Stage__c</fullName>
    <description>Created on 6.7.22 as part of the Advisory Information tab on the Opportunity</description>
    <inlineHelpText>The stage of advisory work this customer is in.</inlineHelpText>
    <label>Customer Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landscape</fullName>
            </value>
            <value>
                <fullName>Blueprint</fullName>
            </value>
            <value>
                <fullName>Painted Picture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>