force-app/main/default/objects/Opportunity/fields/CZ_OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>CZ_OpportunityId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CZ_OpportunityId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>