force-app/main/default/objects/Opportunity/fields/Data_Migration_Scoping__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Scoping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Migration Scoping</label>
    <type>Checkbox</type>
</CustomField>