force-app/main/default/objects/Opportunity/fields/Data_Migration_Scoping_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Scoping_Date__c</fullName>
    <label>Data Migration Scoping Date</label>
    <type>Date</type>
</CustomField>