force-app/main/default/objects/Opportunity/fields/Date_Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Verified__c</fullName>
    <description>Workflow rule and field update action populates a value in this field when the Delivery or Strategy Fit is updated with a new value</description>
    <inlineHelpText>Captures the date Delivery or Strategy Leadership last updated the Delivery Fit or Strategy Fit fields</inlineHelpText>
    <label>Date Last Verified</label>
    <type>Date</type>
</CustomField>