force-app/main/default/objects/Opportunity/fields/Days_From_Assignment_to_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Assignment_to_Proposal__c</fullName>
    <description>Number of days between proposal completion and SE assignment. A blank value means that an SE has not been assigned, or the proposal has not been completed.</description>
    <formula>/*Assignment to Proposal Completion*/
IF(ISBLANK(SE_Assignment_Date__c) = TRUE,
	NULL,
	IF(ISBLANK(SE_Proposal_Completed_Date__c) = TRUE,
		NULL,
		SE_Proposal_Completed_Date__c - SE_Assignment_Date__c
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between proposal completion and SE assignment. A blank value means that an SE has not been assigned, or the proposal has not been completed.</inlineHelpText>
    <label>Days From Assignment to Proposal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>