force-app/main/default/objects/Opportunity/fields/Days_From_Proposal_to_SOW__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Proposal_to_SOW__c</fullName>
    <description>Number of days between SOW completion and proposal completion. A blank value means that a proposal has not been completed or an SOW has not been completed.</description>
    <formula>/*Proposal Completion to SOW Completion*/
IF(ISBLANK(SE_Proposal_Completed_Date__c) = TRUE,
	NULL,
	IF(ISBLANK(SE_SOW_Completion_Date__c) = TRUE,
		NULL,
		SE_SOW_Completion_Date__c - SE_Proposal_Completed_Date__c
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between SOW completion and proposal completion. A blank value means that a proposal has not been completed or an SOW has not been completed.</inlineHelpText>
    <label>Days From Proposal to SOW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>