force-app/main/default/objects/Opportunity/fields/Days_from_SOW_Completion_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_from_SOW_Completion_to_Close__c</fullName>
    <description>Number of days between SOW completion and opportunity closure. A blank value means that an SOW has not been completed, or the opportunity has not been closed..</description>
    <formula>/*SOW Completion to Opp Close*/
IF(ISBLANK(SE_SOW_Completion_Date__c) = TRUE,
	NULL,
	IF(TEXT(StageName) = &quot;Closed Won&quot; || TEXT(StageName) = &quot;Closed Done&quot;,
		CloseDate  - SE_SOW_Completion_Date__c,
		NULL
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between SOW completion and opportunity closure. A blank value means that an SOW has not been completed, or the opportunity has not been closed..</inlineHelpText>
    <label>Days from SOW Completion to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>