force-app/main/default/objects/Opportunity/fields/Deal_Construction__c.field-meta.xml
<CustomField>
    <fullName>Deal_Construction__c</fullName>
    <inlineHelpText>The opportunity&apos;s supplemental solution items. Used for reporting by the SE Team to identify construction patterns in deals.</inlineHelpText>
    <label>Deal Construction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Architecture</fullName>
            </value>
            <value>
                <fullName>Post Production Support</fullName>
            </value>
            <value>
                <fullName>Migration_Services</fullName>
                <label>Migration Services</label>
            </value>
            <value>
                <fullName>Integration Development</fullName>
            </value>
            <value>
                <fullName>Standard Deployment</fullName>
            </value>
            <value>
                <fullName>Enterprise Deployment</fullName>
            </value>
            <value>
                <fullName>Hero Project/SI Take-Over</fullName>
            </value>
            <value>
                <fullName>Global Resource Model</fullName>
            </value>
            <value>
                <fullName>Enablement Delivery Model</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>CLM w/ Other Product</fullName>
                <isActive>false</isActive>
                <label>CLM w/ Other Product</label>
            </value>
            <value>
                <fullName>Continuous Integration</fullName>
                <isActive>false</isActive>
                <label>Continuous Integration</label>
            </value>
            <value>
                <fullName>Delivery Leadership/Acct Management</fullName>
                <isActive>false</isActive>
                <label>Delivery Leadership/Acct Management</label>
            </value>
            <value>
                <fullName>Deployment</fullName>
                <isActive>false</isActive>
                <label>Deployment</label>
            </value>
            <value>
                <fullName>DigitalRoute</fullName>
                <isActive>false</isActive>
                <label>DigitalRoute</label>
            </value>
            <value>
                <fullName>Enosix</fullName>
                <isActive>false</isActive>
                <label>Enosix</label>
            </value>
            <value>
                <fullName>SIT</fullName>
                <isActive>false</isActive>
                <label>SIT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>