force-app/main/default/objects/Opportunity/fields/Deal_Cycle_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Cycle_Notes__c</fullName>
    <inlineHelpText>Includes a link to the SE OneNote Notebook where the pursuit notes are captured.</inlineHelpText>
    <label>Deal Cycle Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>