force-app/main/default/objects/Opportunity/fields/Deal_Desk__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an opportunity has gone through ATG&apos;s Deal Desk process</description>
    <label>Deal Desk</label>
    <type>Checkbox</type>
</CustomField>