force-app/main/default/objects/Opportunity/fields/Deal_Desk_check__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Desk</label>
    <type>Checkbox</type>
</CustomField>