force-app/main/default/objects/Opportunity/fields/Deal_Desk_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Date__c</fullName>
    <description>This field will be used for two purposes. 1. Forecasting Deal Desk review needs 2. Scheduling Deal Desk Review. This date should be forecasted during scoping activities, and should be updated with the date the Opportunity Owner wishes to schedule their review.</description>
    <inlineHelpText>Purposes: 1. Forecasting Deal Desk review needs 2. Scheduling Deal Desk Review. This date should be forecasted during scoping activities, and should be updated with the date the Opportunity Owner wishes to schedule their review.</inlineHelpText>
    <label>Deal Desk Date</label>
    <type>Date</type>
</CustomField>