force-app/main/default/objects/Opportunity/fields/Deal_Desk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Tier__c</fullName>
    <description>For this field there are three drop down options: Tier 1, Tier 2, Tier 3. Upon selecting a tier and saving the changes, a workflow email will be sent to the Deal Desk Facilitator who then schedules the Opportunity on the Deal Desk meeting. In order to submit something or review, the following fields must be completed: SOW and/or Proposal, Scoping Calculator, and Margin Calculator.</description>
    <inlineHelpText>Deal Desk Facilitator will be notified upon tier change and will schedule the Opportunity on the Deal Desk meeting. Required fields: SOW and/or Proposal, Scoping Calculator, and Margin Calculator.</inlineHelpText>
    <label>Deal Desk Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>