force-app/main/default/objects/Opportunity/fields/Deal_Driver__c.field-meta.xml
<CustomField>
    <fullName>Deal_Driver__c</fullName>
    <description>Denotes who will take point on a deal and drive the activities of the deal. Either ATG or Cognizant.</description>
    <inlineHelpText>Denotes who will take point on a deal and drive the activities of the deal. Either ATG or Cognizant.</inlineHelpText>
    <label>Deal Driver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>Cognizant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>