force-app/main/default/objects/Opportunity/fields/Deal_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Deal_Duration_Months__c</fullName>
    <description>Data pulled directly from WinZone. This fields updates our Project duration field via flow.</description>
    <inlineHelpText>Updated WinZone values</inlineHelpText>
    <label>Deal Duration (Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>