force-app/main/default/objects/Opportunity/fields/Deal_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Deal_Strategy__c</fullName>
    <inlineHelpText>Deal Strategy field for the Sales team</inlineHelpText>
    <label>Strategy Fit Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>