force-app/main/default/objects/Opportunity/fields/Delivery_Fit__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Fit__c</fullName>
    <inlineHelpText>As part of the Deal Priority process, Delivery leadership should assign  priority rating of 1-10 to reflect fit based on resource capacity, architecture, etc.</inlineHelpText>
    <label>Delivery Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>Synergy Only</fullName>
            </value>
            <value>
                <fullName>Needs More Information</fullName>
                <isActive>false</isActive>
                <label>Needs More Information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>