force-app/main/default/objects/Opportunity/fields/Delivery_Fit_Description__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Fit_Description__c</fullName>
    <description>Field that captures notes which add context and justification for Delivery assigning the Delivery Fit Score they assign to this Opportunity</description>
    <inlineHelpText>Field that captures notes which add context and justification for Delivery assigning the Delivery Fit Score they assign to this Opportunity</inlineHelpText>
    <label>Delivery Fit Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>