force-app/main/default/objects/Opportunity/fields/Delivery_Owner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Owner__c</fullName>
    <description>Client opportunity engagement manager responsible for delivering to terms of the SOW</description>
    <label>Delivery Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jim Buller</fullName>
            </value>
            <value>
                <fullName>Joe Plas</fullName>
            </value>
            <value>
                <fullName>Brian O&apos;Conner</fullName>
            </value>
            <value>
                <fullName>Joel Sisk</fullName>
            </value>
            <value>
                <fullName>Steve Raye</fullName>
            </value>
            <value>
                <fullName>Priya Marsonia</fullName>
            </value>
            <value>
                <fullName>Ted Brookbank</fullName>
            </value>
            <value>
                <fullName>Tom Stergios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>