force-app/main/default/objects/Opportunity/fields/Delivery_Ownership_Split__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Ownership_Split__c</fullName>
    <inlineHelpText>The percentage of this opportunity that will count towards Revenue for the Delivery team.</inlineHelpText>
    <label>Delivery Ownership Split</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>