force-app/main/default/objects/Opportunity/fields/Dev_Scoping__c.field-meta.xml
<CustomField>
    <fullName>Dev_Scoping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dev Scoping</label>
    <type>Checkbox</type>
</CustomField>