force-app/main/default/objects/Opportunity/fields/Dev_Scoping_Date__c.field-meta.xml
<CustomField>
    <fullName>Dev_Scoping_Date__c</fullName>
    <label>Dev Scoping Date</label>
    <type>Date</type>
</CustomField>