force-app/main/default/objects/Opportunity/fields/Direct_Client_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Direct_Client_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Client Revenue</label>
    <type>Checkbox</type>
</CustomField>