force-app/main/default/objects/Opportunity/fields/Documentation_Folder__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Folder__c</fullName>
    <description>Insert a link to the folder on the Sales &amp; SE SharePoint where the Scoping Calculator, Margin Calculator, Proposal and/or SOW is stored. Visit the Sales Ops SharePoint site for information on ATG process for Documentation Storage and Management</description>
    <inlineHelpText>Insert a link to the folder on the Sales &amp; SE SharePoint where the Scoping Calculator, Margin Calculator, Proposal and/or SOW is stored. Visit the Sales Ops SharePoint site for information on ATG process for Documentation Storage and Management</inlineHelpText>
    <label>Documentation Folder</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>