force-app/main/default/objects/Opportunity/fields/End_Date_2__c.field-meta.xml
<CustomField>
    <fullName>End_Date_2__c</fullName>
    <formula>Start_Date__c + ( Project_Duration__c * 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field calculated the project end date by taking the value in the Start Date field and adding the &quot;Project Duration&quot; value.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>