force-app/main/default/objects/Opportunity/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>This field will be removed by COB 4.12.21 and we will transition to inputting Project length in the Project Duration (weeks) Field.</inlineHelpText>
    <label>End Date - Deprecate COB 4.13.21</label>
    <type>Date</type>
</CustomField>