force-app/main/default/objects/Opportunity/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <description>What is the type of engagement this opportunity represents</description>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Implementation</fullName>
            </value>
            <value>
                <fullName>Lite Implementation</fullName>
            </value>
            <value>
                <fullName>Standard Implementation</fullName>
            </value>
            <value>
                <fullName>Enhanced Implementation</fullName>
            </value>
            <value>
                <fullName>Premium Implementation</fullName>
            </value>
            <value>
                <fullName>Custom Implementation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>