force-app/main/default/objects/Opportunity/fields/Exec_SME_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Exec_SME_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a look up to the Contact object to assign an Exec/SME to this Opportunity..</description>
    <inlineHelpText>This is the name of the resource being assigned to this Opportunity.</inlineHelpText>
    <label>Exec/SME Assigned</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>