force-app/main/default/objects/Opportunity/fields/Exec_SME_Needed__c.field-meta.xml
<CustomField>
    <fullName>Exec_SME_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if an Exec or SME is needed on this project.</inlineHelpText>
    <label>Exec/SME Needed</label>
    <type>Checkbox</type>
</CustomField>