force-app/main/default/objects/Opportunity/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>External ID for us in migration</description>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>