force-app/main/default/objects/Opportunity/fields/Functional_Roles__c.field-meta.xml
<CustomField>
    <fullName>Functional_Roles__c</fullName>
    <description>Projected functional roles for project engagement</description>
    <label>Functional Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automation Consultant</fullName>
            </value>
            <value>
                <fullName>Automation Consultant - Senior</fullName>
            </value>
            <value>
                <fullName>Billing Analyst</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Business Analyst - Senior</fullName>
            </value>
            <value>
                <fullName>Business Process Consultant</fullName>
            </value>
            <value>
                <fullName>Business Solutions Architect</fullName>
            </value>
            <value>
                <fullName>Conversion Specialist</fullName>
            </value>
            <value>
                <fullName>Data Mapper</fullName>
            </value>
            <value>
                <fullName>Data Migration Specialist</fullName>
            </value>
            <value>
                <fullName>Enterprise Architect</fullName>
            </value>
            <value>
                <fullName>Expert Services</fullName>
            </value>
            <value>
                <fullName>Implementation Consultant</fullName>
            </value>
            <value>
                <fullName>Implementation Consultant - Senior</fullName>
            </value>
            <value>
                <fullName>Manual Tester</fullName>
            </value>
            <value>
                <fullName>Migration Specialist</fullName>
            </value>
            <value>
                <fullName>Network SME</fullName>
            </value>
            <value>
                <fullName>OSS Infrastructure SME</fullName>
            </value>
            <value>
                <fullName>Process Analyst</fullName>
            </value>
            <value>
                <fullName>Product Analyst/UX Designer</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Project Manager - Senior</fullName>
            </value>
            <value>
                <fullName>PST - Deployments</fullName>
            </value>
            <value>
                <fullName>PST - Post Implementation Support</fullName>
            </value>
            <value>
                <fullName>QA/Tester</fullName>
            </value>
            <value>
                <fullName>QA/Testing Lead</fullName>
            </value>
            <value>
                <fullName>QA Analyst</fullName>
            </value>
            <value>
                <fullName>QA Analyst - Senior</fullName>
            </value>
            <value>
                <fullName>QA Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>