force-app/main/default/objects/Opportunity/fields/Gross_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Percent__c</fullName>
    <description>Gross Margin Percent from Margin Calculator.</description>
    <inlineHelpText>Input Gross Margin Percent from Margin Calculator.</inlineHelpText>
    <label>Gross Margin Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>