force-app/main/default/objects/Opportunity/fields/Gross_TCV__c.field-meta.xml
<CustomField>
    <fullName>Gross_TCV__c</fullName>
    <description>Data pulled from winzone and used to capture the total TCV of the associated Opportunity in winZone. Data pulled directly from WinZone and read-only in ATG Salesforce.</description>
    <inlineHelpText>Data pulled from winzone and used to capture the total TCV of the associated Opportunity in winZone. Data pulled directly from WinZone and read-only in ATG Salesforce.</inlineHelpText>
    <label>Gross TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>