force-app/main/default/objects/Opportunity/fields/Key_Revenue_Stream__c.field-meta.xml
<CustomField>
    <fullName>Key_Revenue_Stream__c</fullName>
    <description>Key Synergy Revenue Stream</description>
    <inlineHelpText>Choose one of the following revenue streams to help with the planning and breakdown of synergy sales targets</inlineHelpText>
    <label>Key Revenue Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>High Value Services - Cross Selling Q2C, Work.com</fullName>
            </value>
            <value>
                <fullName>Large Accounts - Cross Selling Services/Resources</fullName>
            </value>
            <value>
                <fullName>Staffing - Salesforce General</fullName>
            </value>
            <value>
                <fullName>Staffing - Q2C Resources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>