force-app/main/default/objects/Opportunity/fields/Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified_Date__c</fullName>
    <description>Date last audited and credit confirmed</description>
    <inlineHelpText>Date last audited and credit confirmed</inlineHelpText>
    <label>Last Verified Date</label>
    <type>Date</type>
</CustomField>