force-app/main/default/objects/Opportunity/fields/Lead_Client_Information_Fields__c.field-meta.xml
<CustomField>
    <fullName>Lead_Client_Information_Fields__c</fullName>
    <description>Used to capture all information from Client Information section of lead conversion</description>
    <inlineHelpText>Used to capture all information from Client Information section of lead conversion</inlineHelpText>
    <label>Lead Client Information Fields</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>