force-app/main/default/objects/Opportunity/fields/Lead_Deal_Pursuit_Information__c.field-meta.xml
<CustomField>
    <fullName>Lead_Deal_Pursuit_Information__c</fullName>
    <description>Captures all fields mapped from Lead Deal Pursuit Section</description>
    <inlineHelpText>Captures all fields mapped from Lead Deal Pursuit Section</inlineHelpText>
    <label>Lead Deal Pursuit Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>