force-app/main/default/objects/Opportunity/fields/Lead_Sales_Partner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sales_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark as True if ATG/Cognizant/Code Zero is listed as the Lead Sales Partner by Salesforce, confirms co-sell credit has been awarded.</description>
    <inlineHelpText>Mark as True if ATG/Cognizant/Code Zero is listed as the Lead Sales Partner by Salesforce, confirms co-sell credit has been awarded.</inlineHelpText>
    <label>Lead Sales Partner</label>
    <type>Checkbox</type>
</CustomField>