force-app/main/default/objects/Opportunity/fields/Level_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Date__c</fullName>
    <label>Level 1 Date</label>
    <type>Date</type>
</CustomField>