force-app/main/default/objects/Opportunity/fields/Level_2__c.field-meta.xml
<CustomField>
    <fullName>Level_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Level 2</label>
    <type>Checkbox</type>
</CustomField>