force-app/main/default/objects/Opportunity/fields/Level_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Date__c</fullName>
    <label>Level 2 Date</label>
    <type>Date</type>
</CustomField>