force-app/main/default/objects/Opportunity/fields/Licenses2__c.field-meta.xml
<CustomField>
    <fullName>Licenses2__c</fullName>
    <description>Denotes if there are softward licenses being positioned and sold by one of our ISV partners in parallel to ATG&apos;s service deal cycle. This is used by the Salesforce alliance team to track ACV credit</description>
    <inlineHelpText>Denotes if there are software licenses being positioned and sold by one of our ISV partners in parallel to ATG&apos;s service deal cycle</inlineHelpText>
    <label>Licenses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes – Co-selling, credit not yet awarded</fullName>
            </value>
            <value>
                <fullName>No – ($0 credit)</fullName>
            </value>
            <value>
                <fullName>Yes – Co-selling, credit awarded</fullName>
            </value>
            <value>
                <fullName>Unsure &amp; seeking support</fullName>
            </value>
            <value>
                <fullName>Co-Sell</fullName>
                <isActive>false</isActive>
                <label>Co-Sell</label>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>No Licenses</fullName>
                <isActive>false</isActive>
                <label>No Licenses</label>
            </value>
            <value>
                <fullName>Sourced</fullName>
                <isActive>false</isActive>
                <label>Sourced</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>