force-app/main/default/objects/Opportunity/fields/Licenses__c.field-meta.xml
<CustomField>
    <fullName>Licenses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are licenses being sold with this deal? If checked, true. If unchecked, false.</description>
    <inlineHelpText>Are licenses being sold with this deal? If checked, true. If unchecked, false.</inlineHelpText>
    <label>Licenses</label>
    <type>Checkbox</type>
</CustomField>